--- a/raver/html/index.html
+++ b/raver/html/index.html
@@ -15,15 +15,7 @@
                 <nav>
                     <ul>
                         <li><a href="">Home</a></li>
-                        <li><a href="">Categories</a>
-                            <!-- <ul>
-                                <li><a href="">Keyboard</a></li>
-                                <li><a href="">Mouse</a></li>
-                                <li><a href="">Speaker</a></li>
-                                <li><a href="">Headphone</a></li>
-                                <li><a href="">Mousepad</a></li>
-                            </ul> -->
-                        </li>
+                        <li><a href="">Categories</a></li>
                         <li><a href="">Shop</a></li>
                         <li><a href="">About</a></li>
                         <li><a href="">Contact</a></li>
